k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-app
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
