k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-app
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
