k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace : dev
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /orders
        pathType: Prefix
        backend:
          service:
           name : order-service
           port:
            number: 3000
      
      - path: /users
        pathType: Prefix
        backend:
          service:
            name : user-service
            port:
             number : 8000
